Fixes bug where anchor links appear behind navbar

--- a/src/_static/css/launchcode.css
+++ b/src/_static/css/launchcode.css
@@ -418,4 +418,10 @@ table caption {
 
 /* END Tables */
 
-
+p[id]:before { 
+    display: block; 
+    content: " "; 
+    margin-top: -60px;
+    height: 60px;
+    visibility: hidden; 
+}
